--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap")
-layer(base);
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap") layer(base);
 
 @import "tailwindcss";
 
@@ -41,18 +40,18 @@ layer(base);
   --color-white: #ffffff;
   --color-black: #101828;
 
-  --color-brand-25: #f2f7ff;
-  --color-brand-50: #ecf3ff;
-  --color-brand-100: #dde9ff;
-  --color-brand-200: #c2d6ff;
-  --color-brand-300: #9cb9ff;
-  --color-brand-400: #7592ff;
-  --color-brand-500: #465fff;
-  --color-brand-600: #3641f5;
-  --color-brand-700: #2a31d8;
-  --color-brand-800: #252dae;
-  --color-brand-900: #262e89;
-  --color-brand-950: #161950;
+  --color-brand-25: #F9FCFD;
+  --color-brand-50: #F2F8FB;
+  --color-brand-100: #E4F1F8;
+  --color-brand-200: #CBE3F1;
+  --color-brand-300: #A6CFE6;
+  --color-brand-400: #82B6D5;
+  --color-brand-500: #5D9CC4;
+  --color-brand-600: #3A82B3;
+  --color-brand-700: #296891;
+  --color-brand-800: #1F5272;
+  --color-brand-900: #163E56;
+  --color-brand-950: #0E2A3A;
 
   --color-blue-light-25: #f5fbff;
   --color-blue-light-50: #f0f9ff;
@@ -174,6 +173,7 @@ layer(base);
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -181,6 +181,7 @@ layer(base);
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
   }
+
   button:not(:disabled),
   [role="button"]:not(:disabled) {
     cursor: pointer;
@@ -244,12 +245,16 @@ layer(base);
 }
 
 @utility no-scrollbar {
+
   /* Chrome, Safari and Opera */
   &::-webkit-scrollbar {
     display: none;
   }
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 @utility custom-scrollbar {
@@ -277,6 +282,7 @@ layer(base);
 }
 
 @layer utilities {
+
   /* For Remove Date Icon */
   input[type="date"]::-webkit-inner-spin-button,
   input[type="time"]::-webkit-inner-spin-button,
@@ -290,18 +296,23 @@ layer(base);
 .sidebar:hover {
   width: 290px;
 }
+
 .sidebar:hover .logo {
   display: block;
 }
+
 .sidebar:hover .logo-icon {
   display: none;
 }
+
 .sidebar:hover .sidebar-header {
   justify-content: space-between;
 }
+
 .sidebar:hover .menu-group-title {
   display: block;
 }
+
 .sidebar:hover .menu-group-icon {
   display: none;
 }
@@ -318,10 +329,11 @@ layer(base);
   display: flex;
 }
 
-.tableCheckbox:checked ~ span span {
+.tableCheckbox:checked~span span {
   @apply opacity-100;
 }
-.tableCheckbox:checked ~ span {
+
+.tableCheckbox:checked~span {
   @apply border-brand-500 bg-brand-500;
 }
 
@@ -341,21 +353,27 @@ layer(base);
 .apexcharts-tooltip-marker {
   @apply mr-1.5! h-1.5! w-1.5!;
 }
+
 .apexcharts-legend-text {
   @apply pl-5! text-gray-700! dark:text-gray-400!;
 }
+
 .apexcharts-tooltip-series-group {
   @apply p-0!;
 }
+
 .apexcharts-tooltip-y-group {
   @apply p-0!;
 }
+
 .apexcharts-tooltip-title {
   @apply mb-0! border-b-0! bg-transparent! p-0! text-[10px]! leading-4! text-gray-800! dark:text-white/90!;
 }
+
 .apexcharts-tooltip-text {
   @apply text-theme-xs! text-gray-700! dark:text-white/90!;
 }
+
 .apexcharts-tooltip-text-y-value {
   @apply font-medium!;
 }
@@ -363,9 +381,11 @@ layer(base);
 .apexcharts-gridline {
   @apply stroke-gray-100! dark:stroke-gray-800!;
 }
+
 #chartTwo .apexcharts-datalabels-group {
   @apply -translate-y-24!;
 }
+
 #chartTwo .apexcharts-datalabels-group .apexcharts-text {
   @apply fill-gray-800! font-semibold! dark:fill-white/90!;
 }
@@ -377,9 +397,11 @@ layer(base);
 .jvm-container {
   @apply bg-gray-50! dark:bg-gray-900!;
 }
+
 .jvm-region.jvm-element {
   @apply hover:fill-brand-500! dark:hover:fill-brand-500! fill-gray-300! dark:fill-gray-700!;
 }
+
 .jvm-marker.jvm-element {
   @apply stroke-gray-200! dark:stroke-gray-800!;
 }
@@ -407,6 +429,7 @@ layer(base);
 .flatpickr-wrapper {
   @apply w-full;
 }
+
 .flatpickr-calendar {
   @apply dark:bg-gray-dark! dark:shadow-theme-xl! 2xsm:w-auto! mt-2 rounded-xl! p-5! text-gray-500! dark:text-gray-400!;
 }
@@ -415,10 +438,12 @@ layer(base);
 .flatpickr-months .flatpickr-next-month:hover svg {
   @apply stroke-brand-500;
 }
+
 .flatpickr-calendar.arrowTop:before,
 .flatpickr-calendar.arrowTop:after {
   @apply hidden;
 }
+
 .flatpickr-current-month .cur-month,
 .flatpickr-current-month input.cur-year {
   @apply h-auto! pt-0! text-lg! font-medium! text-gray-800! dark:text-white/90!;
@@ -440,32 +465,39 @@ layer(base);
 .flatpickr-day {
   @apply text-theme-sm! flex! items-center! font-medium! text-gray-800! dark:text-white/90! dark:hover:border-gray-300! dark:hover:bg-gray-900!;
 }
+
 .flatpickr-day.nextMonthDay,
 .flatpickr-day.prevMonthDay {
   @apply text-gray-400!;
 }
+
 .flatpickr-months .flatpickr-prev-month,
 .flatpickr-months .flatpickr-next-month {
   @apply top-7! dark:fill-white! dark:text-white!;
 }
+
 .flatpickr-months .flatpickr-prev-month.flatpickr-prev-month,
 .flatpickr-months .flatpickr-next-month.flatpickr-prev-month {
   @apply left-7!;
 }
+
 .flatpickr-months .flatpickr-prev-month.flatpickr-next-month,
 .flatpickr-months .flatpickr-next-month.flatpickr-next-month {
   @apply right-7!;
 }
+
 span.flatpickr-weekday,
 .flatpickr-months .flatpickr-month {
   @apply dark:fill-white! dark:text-white!;
 }
+
 .flatpickr-day.inRange {
   box-shadow:
     -5px 0 0 #f9fafb,
-    5px 0 0 #f9fafb !important;
+    5px 0 0 #f9fafb!important;
   @apply dark:shadow-datepicker!;
 }
+
 .flatpickr-day.inRange,
 .flatpickr-day.prevMonthDay.inRange,
 .flatpickr-day.nextMonthDay.inRange,
@@ -480,12 +512,14 @@ span.flatpickr-weekday,
 .flatpickr-day.nextMonthDay:focus {
   @apply border-gray-50! bg-gray-50! dark:border-0! dark:border-white/5! dark:bg-white/5!;
 }
+
 .flatpickr-day.selected,
 .flatpickr-day.startRange,
 .flatpickr-day.selected,
 .flatpickr-day.endRange {
   @apply text-white! dark:text-white!;
 }
+
 .flatpickr-day.selected,
 .flatpickr-day.startRange,
 .flatpickr-day.endRange,
@@ -507,9 +541,10 @@ span.flatpickr-weekday,
   background: #465fff;
   @apply border-brand-500! bg-brand-500! hover:border-brand-500! hover:bg-brand-500!;
 }
-.flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n + 1)),
-.flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n + 1)),
-.flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n + 1)) {
+
+.flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n + 1)),
+.flatpickr-day.startRange.startRange+.endRange:not(:nth-child(7n + 1)),
+.flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n + 1)) {
   box-shadow: -10px 0 0 #465fff;
 }
 
@@ -519,9 +554,10 @@ span.flatpickr-weekday,
 .flatpickr-months .flatpickr-next-month {
   @apply hover:fill-none!;
 }
+
 .flatpickr-months .flatpickr-prev-month:hover svg,
 .flatpickr-months .flatpickr-next-month:hover svg {
-  fill: none !important;
+  fill: none!important;
 }
 
 .flatpickr-calendar.static {
@@ -530,29 +566,35 @@ span.flatpickr-weekday,
 
 @media screen and (max-width: 525px) {
   .flatpickr-calendar.static {
-    margin-right: -60px !important;
+    margin-right: -60px!important;
   }
 }
 
 .fc .fc-view-harness {
   @apply custom-scrollbar max-w-full overflow-x-auto;
 }
+
 .fc-dayGridMonth-view.fc-view.fc-daygrid {
   @apply min-w-[718px];
 }
-.fc .fc-scrollgrid-section > * {
+
+.fc .fc-scrollgrid-section>* {
   border-right-width: 0;
   border-bottom-width: 0;
 }
+
 .fc .fc-scrollgrid {
   border-left-width: 0;
 }
+
 .fc .fc-toolbar.fc-header-toolbar {
   @apply flex-col gap-4 px-6 pt-6 sm:flex-row;
 }
+
 .fc-button-group {
   @apply gap-2;
 }
+
 .fc-button-group .fc-button {
   @apply flex h-10 w-10 items-center justify-center rounded-lg! border border-gray-200 bg-transparent hover:border-gray-200 hover:bg-gray-50 focus:shadow-none active:border-gray-200! active:bg-transparent! active:shadow-none! dark:border-gray-800 dark:hover:border-gray-800 dark:hover:bg-gray-900 dark:active:border-gray-800!;
 }
@@ -561,109 +603,141 @@ span.flatpickr-weekday,
   @apply mt-1 inline-block;
   content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.0068 6L9.75684 12.25L16.0068 18.5' stroke='%23344054' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 }
+
 .fc-button-group .fc-button.fc-next-button:before {
   @apply mt-1 inline-block;
   content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.50684 19L15.7568 12.75L9.50684 6.5' stroke='%23344054' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 }
+
 .dark .fc-button-group .fc-button.fc-prev-button:before {
   content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.0068 6L9.75684 12.25L16.0068 18.5' stroke='%2398A2B3' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 }
+
 .dark .fc-button-group .fc-button.fc-next-button:before {
   content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.50684 19L15.7568 12.75L9.50684 6.5' stroke='%2398A2B3' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 }
+
 .fc-button-group .fc-button .fc-icon {
   @apply hidden;
 }
+
 .fc-addEventButton-button {
   @apply bg-brand-500! hover:bg-brand-600! rounded-lg! border-0! px-4! py-2.5! text-sm! font-medium! focus:shadow-none!;
 }
+
 .fc-toolbar-title {
   @apply text-lg! font-medium! text-gray-800 dark:text-white/90;
 }
+
 .fc-header-toolbar.fc-toolbar .fc-toolbar-chunk:last-child {
   @apply rounded-lg bg-gray-100 p-0.5 dark:bg-gray-900;
 }
+
 .fc-header-toolbar.fc-toolbar .fc-toolbar-chunk:last-child .fc-button {
   @apply h-auto! w-auto! rounded-md border-0! bg-transparent px-5! py-2! text-sm font-medium text-gray-500 hover:text-gray-700 focus:shadow-none! dark:text-gray-400;
 }
-.fc-header-toolbar.fc-toolbar
-  .fc-toolbar-chunk:last-child
-  .fc-button.fc-button-active {
+
+.fc-header-toolbar.fc-toolbar .fc-toolbar-chunk:last-child .fc-button.fc-button-active {
   @apply bg-white text-gray-900 dark:bg-gray-800 dark:text-white;
 }
+
 .fc-theme-standard th {
   @apply border-x-0! border-t border-gray-200! bg-gray-50 text-left! dark:border-gray-800! dark:bg-gray-900;
 }
+
 .fc-theme-standard td,
 .fc-theme-standard .fc-scrollgrid {
   @apply border-gray-200! dark:border-gray-800!;
 }
+
 .fc .fc-col-header-cell-cushion {
   @apply px-5! py-4! text-sm font-medium text-gray-400 uppercase;
 }
+
 .fc .fc-daygrid-day.fc-day-today {
   @apply bg-transparent;
 }
+
 .fc .fc-daygrid-day {
   @apply p-2;
 }
+
 .fc .fc-daygrid-day.fc-day-today .fc-scrollgrid-sync-inner {
   @apply rounded-sm bg-gray-100 dark:bg-white/[0.03];
 }
+
 .fc .fc-daygrid-day-number {
   @apply p-3! text-sm font-medium text-gray-700 dark:text-gray-400;
 }
+
 .fc .fc-daygrid-day-top {
   @apply flex-row!;
 }
+
 .fc .fc-day-other .fc-daygrid-day-top {
   opacity: 1;
 }
+
 .fc .fc-day-other .fc-daygrid-day-top .fc-daygrid-day-number {
   @apply text-gray-400 dark:text-white/30;
 }
+
 .event-fc-color {
   @apply rounded-lg py-2.5 pr-3 pl-4;
 }
+
 .event-fc-color .fc-event-title {
   @apply p-0 text-sm font-normal text-gray-700;
 }
+
 .fc-daygrid-event-dot {
   @apply mr-3 ml-0 h-5 w-1 rounded-sm border-none;
 }
+
 .fc-event {
   @apply focus:shadow-none;
 }
+
 .fc-daygrid-event.fc-event-start {
   @apply ml-3!;
 }
+
 .event-fc-color.fc-bg-success {
   @apply border-success-50 bg-success-50;
 }
+
 .event-fc-color.fc-bg-danger {
   @apply border-error-50 bg-error-50;
 }
+
 .event-fc-color.fc-bg-primary {
   @apply border-brand-50 bg-brand-50;
 }
+
 .event-fc-color.fc-bg-warning {
   @apply border-orange-50 bg-orange-50;
 }
+
 .event-fc-color.fc-bg-success .fc-daygrid-event-dot {
   @apply bg-success-500;
 }
+
 .event-fc-color.fc-bg-danger .fc-daygrid-event-dot {
   @apply bg-error-500;
 }
+
 .event-fc-color.fc-bg-primary .fc-daygrid-event-dot {
   @apply bg-brand-500;
 }
+
 .event-fc-color.fc-bg-warning .fc-daygrid-event-dot {
   @apply bg-orange-500;
 }
+
 .fc-direction-ltr .fc-timegrid-slot-label-frame {
   @apply px-3 py-1.5 text-left text-sm font-medium text-gray-500 dark:text-gray-400;
 }
+
 .fc .fc-timegrid-axis-cushion {
   @apply text-sm font-medium text-gray-500 dark:text-gray-400;
 }
@@ -685,12 +759,14 @@ span.flatpickr-weekday,
 .carouselFour .swiper-button-prev:after {
   @apply hidden;
 }
+
 .carouselTwo .swiper-button-next.swiper-button-disabled,
 .carouselTwo .swiper-button-prev.swiper-button-disabled,
 .carouselFour .swiper-button-next.swiper-button-disabled,
 .carouselFour .swiper-button-prev.swiper-button-disabled {
   @apply bg-white/60 opacity-100!;
 }
+
 .carouselTwo .swiper-button-next,
 .carouselTwo .swiper-button-prev,
 .carouselFour .swiper-button-next,
@@ -723,22 +799,25 @@ span.flatpickr-weekday,
   @apply w-6.5 rounded-xl;
 }
 
-.form-check-input:checked ~ span {
+.form-check-input:checked~span {
   @apply border-brand-500 dark:border-brand-500 border-[6px];
 }
 
-.taskCheckbox:checked ~ .box span {
+.taskCheckbox:checked~.box span {
   @apply opacity-100;
 }
-.taskCheckbox:checked ~ p {
+
+.taskCheckbox:checked~p {
   @apply text-gray-400 line-through;
 }
-.taskCheckbox:checked ~ .box {
+
+.taskCheckbox:checked~.box {
   @apply border-brand-500 bg-brand-500 dark:border-brand-500;
 }
 
 .task {
-  transition: all 0.2s ease; /* Smooth transition for visual effects */
+  transition: all 0.2s ease;
+  /* Smooth transition for visual effects */
 }
 
 .task.is-dragging {
@@ -747,5 +826,6 @@ span.flatpickr-weekday,
     0px 1px 3px 0px rgba(16, 24, 40, 0.1),
     0px 1px 2px 0px rgba(16, 24, 40, 0.06);
   opacity: 0.8;
-  cursor: grabbing; /* Changes the cursor to indicate dragging */
+  cursor: grabbing;
+  /* Changes the cursor to indicate dragging */
 }
