--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -189,13 +189,14 @@
           <li>
             <a href="#" @click.prevent="selected = (selected === 'PlanTrabajo' ? '':'PlanTrabajo')"
               class="menu-item group"
-              :class="(selected === 'PlanTrabajo') || (page === 'planTrabajoHoy') ? 'menu-item-active' : 'menu-item-inactive'">
+              :class="(selected === 'PlanTrabajo') || (page === 'planTrabajoChecklist' || page === 'planTrabajoSupervision') ? 'menu-item-active' : 'menu-item-inactive'">
+              <!-- Check Circle Icon -->
               <svg
-                :class="(selected === 'PlanTrabajo') || (page === 'planTrabajoHoy') ? 'menu-item-icon-active'  :'menu-item-icon-inactive'"
+                :class="(selected === 'PlanTrabajo') || (page === 'planTrabajoChecklist' || page === 'planTrabajoSupervision') ? 'menu-item-icon-active'  :'menu-item-icon-inactive'"
                 width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M8.50391 4.25C8.50391 3.83579 8.83969 3.5 9.25391 3.5H15.2777C15.4766 3.5 15.6674 3.57902 15.8081 3.71967L18.2807 6.19234C18.4214 6.333 18.5004 6.52376 18.5004 6.72268V16.75C18.5004 17.1642 18.1646 17.5 17.7504 17.5H16.248V17.4993H14.748V17.5H9.25391C8.83969 17.5 8.50391 17.1642 8.50391 16.75V4.25ZM14.748 19H9.25391C8.01126 19 7.00391 17.9926 7.00391 16.75V6.49854H6.24805C5.83383 6.49854 5.49805 6.83432 5.49805 7.24854V19.75C5.49805 20.1642 5.83383 20.5 6.24805 20.5H13.998C14.4123 20.5 14.748 20.1642 14.748 19.75L14.748 19ZM7.00391 4.99854V4.25C7.00391 3.00736 8.01127 2 9.25391 2H15.2777C15.8745 2 16.4468 2.23705 16.8687 2.659L19.3414 5.13168C19.7634 5.55364 20.0004 6.12594 20.0004 6.72268V16.75C20.0004 17.9926 18.9931 19 17.7504 19H16.248L16.248 19.75C16.248 20.9926 15.2407 22 13.998 22H6.24805C5.00541 22 3.99805 20.9926 3.99805 19.75V7.24854C3.99805 6.00589 5.00541 4.99854 6.24805 4.99854H7.00391Z"
-                  fill="" />
+                  d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
+                  fill="currentColor" />
               </svg>
 
               <span class="menu-item-text" :class="sidebarToggle ? 'lg:hidden' : ''">
@@ -214,15 +215,15 @@
             <div class="translate transform overflow-hidden" :class="(selected === 'PlanTrabajo') ? 'block' :'hidden'">
               <ul :class="sidebarToggle ? 'lg:hidden' : 'flex'" class="menu-dropdown mt-2 flex flex-col gap-1 pl-9">
                 <li>
-                  <a href="#" class="menu-dropdown-item group"
-                    :class="page === 'planTrabajoHoy' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'">
-                    Hoy
-                    <span class="absolute right-3 flex items-center gap-1">
-                      <span class="menu-dropdown-badge"
-                        :class="page === 'planTrabajoHoy' ? 'menu-dropdown-badge-active' : 'menu-dropdown-badge-inactive'">
-                        Pro
-                      </span>
-                    </span>
+                  <a href="checklist.html" class="menu-dropdown-item group"
+                    :class="page === 'planTrabajoChecklist' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'">
+                    Checklist tareas
+                  </a>
+                </li>
+                <li>
+                  <a href="supervision.html" class="menu-dropdown-item group"
+                    :class="page === 'planTrabajoSupervision' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'">
+                    Supervisión
                   </a>
                 </li>
               </ul>
