feat: implement Kilometraje section (Introducir and Ver views)

--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -296,15 +296,15 @@
             <div class="translate transform overflow-hidden" :class="(selected === 'Kilometraje') ? 'block' :'hidden'">
               <ul :class="sidebarToggle ? 'lg:hidden' : 'flex'" class="menu-dropdown mt-2 flex flex-col gap-1 pl-9">
                 <li>
-                  <a href="#" class="menu-dropdown-item group"
+                  <a href="kilometraje.html?view=ver" class="menu-dropdown-item group"
                     :class="page === 'kilometrajeListado' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'">
-                    Listado
+                    Ver
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="menu-dropdown-item group"
+                  <a href="kilometraje.html?view=introducir" class="menu-dropdown-item group"
                     :class="page === 'kilometrajeNuevo' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'">
-                    Nuevo
+                    Introducir
                   </a>
                 </li>
               </ul>
